==> jgeisler0303/AGCON/Software/Arduino/mcp_can.cpp <==
#include "mcp_can.h"
#include "timer.h"
#include <util/delay.h>
#include <avr/io.h>
#define spi_read() spi_readwrite(0x00)
#define DDR_SPI DDRB
#define DD_MOSI DDB3
#define DD_MISS DDB4
#define DD_SCK DDB5
#define DD_SS DDB2
#define DD_CS DDD7
#define DDR_CS DDRD
#define PORT_CS PORTD
#define P_CS PD7
#define MCP2515_SELECT()   PORT_CS&= ~_BV(P_CS)
#define MCP2515_UNSELECT() PORT_CS|= _BV(P_CS)

INT8U mcp2515_init(const INT8U canSpeed)                       /* mcp2515init                  */
{

  INT8U res;

    mcp2515_reset();

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
      _delay_ms(10);
      return res;
    }
    _delay_ms(10);

                                                                        /* set boadrate                 */
    if(mcp2515_configRate(canSpeed))
    {
      _delay_ms(10);
      return 8;
    }
    _delay_ms(10);

    if ( res == MCP2515_OK ) {

                                                                        /* init canbuffers              */
        mcp2515_initCANBuffers();

                                                                        /* interrupt mode               */
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);

#if (DEBUG_RXANY==1)
                                                                        /* enable both receive-buffers  */
                                                                        /* to receive any message       */
                                                                        /* and enable rollover          */
        mcp2515_modifyRegister(MCP_RXB0CTRL,
        MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
        MCP_RXB_RX_ANY | MCP_RXB_BUKT_MASK);
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
        MCP_RXB_RX_ANY);
#else
                                                                        /* enable both receive-buffers  */
                                                                        /* to receive messages          */
                                                                        /* with std. and ext. identifie */
                                                                        /* rs                           */
                                                                        /* and enable rollover          */
        mcp2515_modifyRegister(MCP_RXB0CTRL,
        MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
        MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK );
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
        MCP_RXB_RX_STDEXT);
#endif
                                                                        /* enter normal mode            */
        res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);                                                                
        if(res)
        {
//         Serial.print("Enter Normal Mode Fall!!\r\n");
          return res;
        }


            _delay_ms(10);

    }
    return res;

}

INT8U begin(INT8U speedset)
{
    INT8U res;

  // When the SS pin is set as OUTPUT, it can be used as
  // a general purpose output port (it doesn't influence
  // SPI operations).
  // Warning: if the SS pin ever becomes a LOW INPUT then SPI
  // automatically switches to Slave, so the data direction of
  // the SS pin MUST be kept as OUTPUT.
    DDR_SPI|= _BV(DD_SS);
    DDR_CS|= _BV(DD_CS);
    MCP2515_UNSELECT();

    SPCR |= _BV(MSTR);
    SPCR |= _BV(SPE);

    // Set direction register for SCK and MOSI pin.
    // MISO pin automatically overrides to INPUT.
    // By doing this AFTER enabling SPI, we avoid accidentally
    // clocking in a single bit since the lines go directly
    // from "input" to SPI control.  
    // http://code.google.com/p/arduino/issues/detail?id=888
    DDR_SPI|= _BV(DD_MOSI);
    DDR_SPI|= _BV(DD_SCK);
    
    res = mcp2515_init(speedset);
    if (res == MCP2515_OK) return CAN_OK;
    else return CAN_FAILINIT;
}

INT8U init_Mask(INT8U num, INT8U ext, INT32U ulData)
{
    INT8U res = MCP2515_OK;
    _delay_ms(10);

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0){
      _delay_ms(10);
      return res;
    }
    
    if (num == 0){
        mcp2515_write_id(MCP_RXM0SIDH, ext, ulData);
    }
    else if(num == 1){
        mcp2515_write_id(MCP_RXM1SIDH, ext, ulData);
    }
    else res =  MCP2515_FAIL;
    
    res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);
    if(res > 0){
      _delay_ms(10);
      return res;
    }
    _delay_ms(10);
    return res;
}

INT8U init_Filt(INT8U num, INT8U ext, INT32U ulData)
{
    INT8U res = MCP2515_OK;
    _delay_ms(10);
    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
      _delay_ms(10);
      return res;
    }
    
    switch( num )
    {
        case 0:
        mcp2515_write_id(MCP_RXF0SIDH, ext, ulData);
        break;

        case 1:
        mcp2515_write_id(MCP_RXF1SIDH, ext, ulData);
        break;

        case 2:
        mcp2515_write_id(MCP_RXF2SIDH, ext, ulData);
        break;

        case 3:
        mcp2515_write_id(MCP_RXF3SIDH, ext, ulData);
        break;

        case 4:
        mcp2515_write_id(MCP_RXF4SIDH, ext, ulData);
        break;

        case 5:
        mcp2515_write_id(MCP_RXF5SIDH, ext, ulData);
        break;

        default:
        res = MCP2515_FAIL;
    }
    
    res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);
    if(res > 0)
    {
      _delay_ms(10);
      return res;
    }
    _delay_ms(10);
    
    return res;
}
